bevy_gpu_compute_macro/tests/ui/incorrect_vec_constructor_in_macro.stderr
error: cannot construct `bevy_gpu_compute_core::wgsl_helpers::Vec3Bool` with struct literal syntax due to private fields
 --> tests/ui/incorrect_vec_constructor_in_macro.rs:3:1
  |
3 | #[wgsl_shader_module]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: ...and other private field `_force_constructor` that was not provided
  = note: this error originates in the attribute macro `wgsl_shader_module` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you might have meant to use the `new` associated function
  |
3 | #[wgsl_shader_module]::new(_, _, _)
  |                      ++++++++++++++
